--- a/src/app/dashboards/dashboard-components/items-reports/items-reports.component.html
+++ b/src/app/dashboards/dashboard-components/items-reports/items-reports.component.html
@@ -3,20 +3,6 @@
         <div class="float-left">
             <h4>{{title}}</h4>        
         </div>
-        <div class="float-right">
-            <nz-select 
-                style="width: 200px;" 
-                [(ngModel)]="selectedValue"
-                nzShowSearch 
-                nzAllowClear 
-                nzPlaceHolder="Filter By"
-                (ngModelChange)="filter($event)">
-                <nz-option 
-                    *ngFor="let c of categories" 
-                    [nzLabel]="c.name" 
-                    [nzValue]="c.id"></nz-option>
-            </nz-select>        
-        </div>
     </div>
 
     <div class="table-responsive">
@@ -27,45 +13,24 @@
             [nzPageSize]="5" 
             [nzScroll]="{ x: '240px' }"
             class="table forms-table table-striped table-bordered"
-            [nzLoading]="isLoading"
             *ngIf="data.length >= 1">
             <thead>
-                <tr class="bg-light"> 
-                  <th *ngFor="let head of header; let i = index">
-                      {{head}}
-                  </th>
-                </tr>
+              <tr class="bg-light"> 
+                <th *ngFor="let head of header; let i = index">
+                    {{head}}
+                </th>
+              </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let d of headerTable.data" style="cursor: pointer;" (click)="getRecipes(d.item.itemreceipes)">
-                    <td>
-                        {{d.item.id}}
-                    </td>
-                    <td>
-                        {{d.order_id}}
-                    </td>                     
-                    <td>
-                        {{d.item.subcategory.category.name}}
-                    </td>
-                    <td>
-                        {{d.item.name}}
-                    </td>                       
-                    <td>
-                        {{d.item.price}}
-                    </td>                                             
-                    <td>
-                        {{d.totalitemamount}}
-                    </td>                        
+                <tr *ngFor="let allData of headerTable.data; let i = index" >
+                    <td 
+                        *ngFor="let d of allData | render" 
+                        class="hide-long-text"
+                        [class.txt-red]="allData[d] < 0"
+                        [class.pointer]="d == 'expense'">{{allData[d]}}</td>
                 </tr>
             </tbody>
-        </nz-table>           
-    </div>        
+        </nz-table>
+        <nz-table [nzData]="data" *ngIf="data.length == 0"></nz-table>              
+    </div>     
 </div>
-
-<app-popup-details
-    [data]="itemRecipes"
-    [title]="lang.itemRecipesTxt"
-    [header]="popupHeader"
-    [isVisible]="isVisible"
-    (closeDV)="isVisible = $event"
-></app-popup-details>
