--- a/src/app/dashboards/dashboard1/dashboard1.component.html
+++ b/src/app/dashboards/dashboard1/dashboard1.component.html
@@ -83,7 +83,7 @@
             [title]="lang.monthSalesTxt" 
             [type]="'line'"
             [selector]="'month-chart'"
-            [orderLabelsKey]="'name'"
+            [orderLabelsKey]="'modified'"
             [orderTotalKey]="'Ordertotals'"></app-bar-chart>
     </div>
 
@@ -109,25 +109,11 @@
 
 <div class="row">
     <div class="col-md-6">
-        <app-bar-chart 
-            [sales]="monthordersByCompaniesForMonth" 
-            [color]="'#4798e8'" 
-            [title]="lang.monthCompSalesTxt" 
-            [type]="'line'"
-            [selector]="'comp-month-chart'"
-            [orderLabelsKey]="'package'"
-            [orderTotalKey]="'Ordertotals'"></app-bar-chart>
+        <app-info-tbl [title]="lang.monthCompSalesTxt" [header]="headerComp" [data]="monthordersByCompaniesForMonth"></app-info-tbl>
     </div>
 
     <div class="col-md-6">
-        <app-bar-chart 
-            [sales]="weekordersByCompaniesForWeek" 
-            [color]="'#4798e8'" 
-            [title]="lang.weekCompSalesTxt" 
-            [type]="'line'"
-            [selector]="'comp-week-chart'"
-            [orderLabelsKey]="'package'"
-            [orderTotalKey]="'Ordertotals'"></app-bar-chart>
+        <app-info-tbl [title]="lang.weekCompSalesTxt" [header]="headerComp" [data]="weekordersByCompaniesForWeek"></app-info-tbl>
     </div>
 </div>
 
