--- a/src/app/dashboards/dashboard1/dashboard1.component.html
+++ b/src/app/dashboards/dashboard1/dashboard1.component.html
@@ -89,7 +89,7 @@
             [infoClass]="'btn-info'"
             [infoIcon]="'fas fa-money-bill-alt'"
             [infoTxt]="lang.totMonthProfit"
-            [infoTotal]="reports['monthorders'][0]['Profittotals']"
+            [infoTotal]="totMonthProfit"
         ></app-stats-info>
     </div>    
     
@@ -98,7 +98,7 @@
             [infoClass]="'btn-success'"
             [infoIcon]="'fas fa-money-bill-alt'"
             [infoTxt]="lang.totWeekProfit"
-            [infoTotal]="reports['weekorders'][0]['Profittotals']"
+            [infoTotal]="totWeekProfit"
         ></app-stats-info>
     </div>    
 </div>
