--- a/src/app/RMS/components/transactions/all-transactions/all-trans-tbl/all-trans-tbl.component.html
+++ b/src/app/RMS/components/transactions/all-transactions/all-trans-tbl/all-trans-tbl.component.html
@@ -6,7 +6,7 @@
                     [nzFrontPagination]="false"
                     [nzData]="data" 
                     [nzLoading]="loading"
-                    [nzTotal]="pages.page_count"
+                    [nzTotal]="pages.page_count * 20"
                     [nzPageSize]="20"
                     [nzPageIndex]="1"
                     [nzScroll]="{ x: '240px' }"
