--- a/src/app/RMS/components/transactions/all-transactions/all-transactions.component.html
+++ b/src/app/RMS/components/transactions/all-transactions/all-transactions.component.html
@@ -1,7 +1,7 @@
 <!-- ============================================================== -->
 <!-- Start Transactions Filter -->
 <!-- ============================================================== -->
-<app-all-trans-filter [users]="users" (loading)="loading = $event"></app-all-trans-filter>
+<app-all-trans-filter [users]="users" (loading)="loading = $event" (data)="transactions = $event" (pages)="pages = $event"></app-all-trans-filter>
 <!-- ============================================================== -->
 <!-- Start Transactions Filter -->
 <!-- ============================================================== -->
